# catlang

./: .gitignore  .yo-rc.json  404.html  Cargo.toml  Gopkg.toml  LICENSE  README.md  go.mod  go.sum  grammar.txt  index.html  magefile.go  main.go  sitemap.xml  users.html
.circleci/: config.yml
.github/workflows/: check-and-lint.yml  documentation.yml  test.yml
assets/css/: styles.3da4e2ba.css  styles.f86020bf.css
assets/js/: 1.e6a4d59b.js  17896441.4818bb13.js  17896441.553ea582.js  1be78505.ee219dce.js  1db64337.1aa42228.js  1db64337.4f979f15.js  2.0edd5434.js  2.ded9d6e1.js  209736a1.405fbd18.js  209736a1.e716cc20.js  218.9e54a3ef.js  24902b9b.14314d8e.js  24902b9b.182a5409.js  271.2055e697.js  3.104be550.js  3a70d61f.068b169c.js  3a70d61f.a566168a.js  3a70d61f.f6baf72f.js  3b8c55ea.31faf49d.js  3b8c55ea.ce24b3cb.js  3c6e406d.97a18204.js  3c6e406d.cfccf509.js  3fb2f3e2.034e9d2d.js  3fb2f3e2.202d1d2f.js  47a5dbed.112d2d30.js  47a5dbed.68004f5f.js  51d64547.54d4ca0c.js  51d64547.caf8a266.js  581d418c.009de0eb.js  581d418c.d340e1c9.js  58d31f93.512ae724.js  5fbc5cf1.8981b733.js  5fbc5cf1.cb40327a.js  62521dac.9830f429.js  62521dac.b3df82e7.js  74b4e094.3e46a0c5.js  74b4e094.de7cbd4d.js  7aa1642e.01d9e985.js  7b9d9f82.df392cae.js  7b9d9f82.efe6ef5f.js  (+57 more)
ast/: ast.go  ast_test.go  kind.go  kind_test.go  walk.go
blog/: atom.xml  feed.xml  index.html  rss.xml
blog/archive/: index.html
c_samples/: empty.ll  hello.ll  out.ll  simd.c  simd.ll  simd.s  sum_type.c  sum_type.ll
css/: main.css
docs/: Typing.html  api-index.html  api-index.md  arrays.html  arrays.md  build-system.html  build-system.md  casting.html  casting.md  control-flow.html  control-flow.md  editor-plugins.html  enums.html  enums.md  error-handling.md  functions.html  functions.md  generics.html  grammar.html  grammar.md  grammar.txt  index.html  installation.html  installation.md  interfaces.html  interfaces.md  interop.md  main.tex  method-calls.html  method-calls.md  native-types.html  native-types.md  overview.html  overview.md  project-structure.html  project-structure.md  structs.html  structs.md  syntax.html  syntax.md  (+6 more)
docs/api/: index.html
docs/arrays/: index.html
docs/build-system/: index.html
en/: index.html  users.html
lexer/: error.go  file.go  fileset.go  pos.go  scan.go  scan_test.go  token.go
parser/: parse.go
samples/: basic.cat  fib.cat
scripts/: codecov.sh
src/: lexer.rs  main.rs  token.rs
tests/: test_basics.rs
token/: error.go  file.go  fileset.go  pos.go  position_test.go  token.go  token_test.go
vscode-catlang/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js  sidebars.json  siteConfig.js
(+141 files in other folders)
