[package]
name = "catlang"
version = "0.1.0"
authors = ["Alic Szecsei <aszecsei@gmail.com>"]
publish = false
description = "A compiler for the Catlang programming language"
documentation = "aszecsei.github.io/catlang"
repository = "github.com/aszecsei/catlang"

readme = "README.md"

keywords = ["catlang", "compiler"]

license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4.13"
clap = "2.33.1"
console = "0.11.3"
fnv = "1.0.7"
human-panic = "1.0.3"
indicatif = "0.15.0"
log = "0.4.11"
petgraph = "0.5.1"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_yaml = "0.8.13"
logos = "0.11.4"
lazy_static = "1.4.0"
toolshed = "0.8.1"
thiserror = "1.0.20"
symbol-map = "1.0.2"
lsp-server = "0.3.3"
lsp-types = "0.79.0"
serde_json = "1.0.57"
anyhow = "1.0.32"

[dev-dependencies]
pretty_assertions = "0.6.1"

[lib]
name = "catlang"
path = "src/lib/lib.rs"

[[bin]]
name = "catlang"
path = "src/bin/main.rs"
